// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserPreferencesPage should match the snapshot, display into a desktop viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Mes Accès
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      UserPreferencesComponent
    </div>
    <div>
      UserPreferencesIntroductionComponent
    </div>
  </div>
</div>
`;

exports[`UserPreferencesPage should match the snapshot, display into a mobile viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Mes Accès
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      UserPreferencesComponent
    </div>
    <div>
      UserPreferencesIntroductionComponent
    </div>
  </div>
</div>
`;
